# snyk-audit-to-csv

./: .gitignore  Dockerfile  README.md  events.py  main.py  pyproject.toml  util.py
scripts/: entrypoint.sh
